HelloUltraviolet/Fixtures/RejectedSource/Keys/MemoryOrderingDiagnostic/Expected.uv
//! Expected diagnostic metadata for the MemoryOrderingDiagnostic rejected-source specimen.

expectedDiagnostic("E-CON-0096", "diagnostics.19.MemoryOrdering")
